[gd_scene load_steps=6 format=3 uid="uid://dbid8lyw3slh"]

[ext_resource type="Script" path="res://UI/UI.gd" id="1_ka0qo"]
[ext_resource type="FontFile" uid="uid://5m7h3ijqm4ei" path="res://assets/ARCADE_N.TTF" id="1_vlnyr"]
[ext_resource type="Texture2D" uid="uid://mukyqm1nn0n2" path="res://assets/stanima bar.png" id="2_refxl"]
[ext_resource type="Script" path="res://UI/StaminaBar.gd" id="3_r3tei"]
[ext_resource type="Texture2D" uid="uid://eei4y1tod3m4" path="res://Untitled_Artwork.png" id="5_uqtjf"]

[node name="UI" type="CanvasLayer"]
process_mode = 3
layer = 0
script = ExtResource("1_ka0qo")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 866.0
offset_bottom = 1298.0
texture = ExtResource("5_uqtjf")

[node name="Win" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Win"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -265.5
offset_top = 120.0
offset_right = 245.5
offset_bottom = 199.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_vlnyr")
theme_override_font_sizes/font_size = 75
text = "you win"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Continue" type="Button" parent="Win"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = 3.0
offset_right = 88.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_vlnyr")
theme_override_font_sizes/font_size = 25
text = "continue"
flat = true

[node name="Quit" type="Button" parent="Win"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = 35.0
offset_right = 88.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_vlnyr")
theme_override_font_sizes/font_size = 25
text = "Quit"
flat = true

[node name="Lose" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Lose"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -302.0
offset_top = 450.0
offset_right = 282.0
offset_bottom = 529.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_vlnyr")
theme_override_font_sizes/font_size = 75
text = "you lose"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Restart" type="Button" parent="Lose"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = 3.0
offset_right = 88.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_vlnyr")
theme_override_font_sizes/font_size = 25
text = "restart"
flat = true

[node name="Quit" type="Button" parent="Lose"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = 35.0
offset_right = 88.0
offset_bottom = 69.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_vlnyr")
theme_override_font_sizes/font_size = 25
text = "Quit"
flat = true

[node name="StaminaBar" type="TextureProgressBar" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 120.0
offset_top = -370.0
offset_right = 340.0
offset_bottom = -322.0
grow_vertical = 0
pivot_offset = Vector2(0, 48)
value = 100.0
texture_progress = ExtResource("2_refxl")
script = ExtResource("3_r3tei")

[connection signal="mouse_entered" from="Win/Continue" to="." method="_on_continue_mouse_entered"]
[connection signal="pressed" from="Win/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Win/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Lose/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Lose/Quit" to="." method="_on_quit_pressed"]
